# zine-machine

./: .gitignore  CHANGES.md  README.md  hello.txt  print-test.py  print.py  pyproject.toml  run-console.sh  run-test.sh  run.sh  sanitize-text.py
categories/Test/: test1.zine  test2.zine
categories/Theory/: AnarchyWouldNeverWork.zine  RevolutionaryOrganizationsAndIndividualCommitmentMonsieurDupont.zine  SurplusValue.zine
categories/diy/: BlackDye.zine  NoDigGarden.zine  soups.zine  wheatpasting.zine
categories/ecology/: ForagingCalendar.zine  agriculture.zine  exceptionalism.zine
categories/queer-stuff/: ChangedSex.zine  NoHierarchy.zine
categories/theory/: RevOrgs.zine  WhoWillTakeOutTheTrash.zine
src/zine-machine/: __main__.py  button.py  profile.py  zinemachine.py
src/zinemachine/: __main__.py  bluetoothprintermanager.py  button.py  consoleprinter.py  consoleprintermanager.py  inputmanager.py  keyboardbutton.py  markup.py  profile.py  validatezine.py  zine.py  zinemachine.py  zinevalidator.py
test/: test_markup.py  test_zine.py  test_zinemachine.py
test-zines/.test/: first-zine.zine  formatted.zine  invalid.zine  qrcode.zine
test-zines/test-blue/: test-blue-1.zine  test-blue-2.zine  test-blue-4.zine
test-zines/test-green/: test-green-1.zine  test-green-2.zine  test-green-3.zine  test-green-4.zine
test-zines/test-pink/: test-pink-2.zine  test-pink-4.zine
test-zines/test-yellow/: test-yellow-1.zine  test-yellow-2.zine  test-yellow-3.zine  test-yellow-4.zine
zines/diy/: AluminumStickers.zine  FoodLogistics.zine  HelloMyNameIs.zine  NoDigGarden.zine  veggiescraps.zine
zines/ecology/: DeepListening.zine  DevilDeal.zine  TrashTree.zine  fruitwalls.zine  sexforest.zine
zines/queer-stuff/: DestroyGender.zine  FaggotsFriends.zine  GenderSelfDetermination.zine  QueerInsurrection.zine  TransphobiaRespectability.zine
zines/test/: formatted.zine  how-to-make-a-zine-machine-entry.zine  test1.zine  (+3 more)
zines/test-blue/: test-blue-3.zine
zines/test-pink/: test-pink-1.zine  test-pink-3.zine
(+24 files in other folders)
