[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zinemachine"
version = "1.0.0"
description = "print zines from a receipt printer using raspberry pi"
readme = "README.md"
authors = [
	{ name = "Elliot Hatch", email = "elliot.hatch@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["zine", "printer", "receipt printer", "POS printer", "escpos"]
requires-python = ">=3.7"

dependencies = [
	"python-escpos==3.0a8",
	"RPi.GPIO",
	"Pillow>=9.1.0"
]

classifiers = [
	"Development Status :: 4 - Beta",
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://elliot.zone/zinemachine"
Repository = "https://github.com/elliothatch/zine-machine.git"
Changelog = "https://github.com/elliothatch/zine-machine/blob/master/CHANGES.md"
